--- a/thesiscodejs/visualization.html
+++ b/thesiscodejs/visualization.html
@@ -1752,14 +1752,14 @@ f 51 54 59
        Choose a surface:
        <input type="radio" name="surface" value="tetra" id="tetra" checked="true">
        <label for="tetra">tetrahedron</label>
-       <input type="radio" name="surface" value="egg" id="egg">
-       <label for="egg">egg</label>
+       <!-- <input type="radio" name="surface" value="egg" id="egg">
+       <label for="egg">egg</label> -->
        <input type="radio" name="surface" value="cube" id="cube">
        <label for="cube">cube</label>
-       <input type="radio" name="surface" value="bunny" id="bunny">
+       <!-- <input type="radio" name="surface" value="bunny" id="bunny">
        <label for="bunny">bunny</label>
        <input type="radio" name="surface" value="fox" id="fox">
-       <label for="fox">fox</label>
+       <label for="fox">fox</label> -->
        <!-- <input type="radio" name="surface" value="soccer" id="soccer">
        <label for="soccer">soccer ball</label> -->
        <input type="radio" name="surface" value="torus" id="torus">
@@ -1769,7 +1769,6 @@ f 51 54 59
        <input type="radio" name="surface" value="triangle" id="triangle">
        <label for="triangle">triangle</label>
      </div>
-
    </font>
  </body>
 
